syntax = "proto3";

package qazna.v1;

import "google/protobuf/timestamp.proto";

option go_package = "qazna.org/api/gen/go/api/proto/qazna/v1;v1";

message CreateAccountRequest {
  string currency = 1;
  int64 initial_amount = 2;
}

message Account {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  map<string, int64> balances = 3;
}

message TransferRequest {
  string from_id = 1;
  string to_id = 2;
  string currency = 3;
  int64 amount = 4;
  string idempotency_key = 5;
}

message TransferResponse {
  Transaction transaction = 1;
}

message Transaction {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  string from_account_id = 3;
  string to_account_id = 4;
  string currency = 5;
  int64 amount = 6;
  string idempotency_key = 7;
  uint64 sequence = 8;
}

message ListTransactionsRequest {
  uint64 after_sequence = 1;
  uint32 limit = 2;
}

message ListTransactionsResponse {
  repeated Transaction items = 1;
  uint64 next_after = 2;
}

message GetAccountRequest {
  string id = 1;
}

message GetBalanceRequest {
  string id = 1;
  string currency = 2;
}

message Balance {
  string currency = 1;
  int64 amount = 2;
}

service LedgerService {
  rpc CreateAccount(CreateAccountRequest) returns (Account);
  rpc GetAccount(GetAccountRequest) returns (Account);
  rpc GetBalance(GetBalanceRequest) returns (Balance);
  rpc Transfer(TransferRequest) returns (TransferResponse);
  rpc ListTransactions(ListTransactionsRequest) returns (ListTransactionsResponse);
}
